# api-gateway/api/router.go
@@ -1,14 +1,16 @@
 package api
 
 import (
+	repo "github.com/baxromumarov/my-services/api-gateway/storage/repo"
+
+	_ "github.com/baxromumarov/my-services/api-gateway/api/docs"
 	v1 "github.com/baxromumarov/my-services/api-gateway/api/handlers/v1"
 	"github.com/baxromumarov/my-services/api-gateway/config"
 	"github.com/baxromumarov/my-services/api-gateway/pkg/logger"
 	"github.com/baxromumarov/my-services/api-gateway/services"
 	"github.com/gin-gonic/gin"
+	swaggerFiles "github.com/swaggo/files"     // swagger embed files
 	ginSwagger "github.com/swaggo/gin-swagger" // gin-swagger middleware
-	swaggerFiles"github.com/swaggo/files" // swagger embed files
-	_"github.com/baxromumarov/my-services/api-gateway/api/docs"
 )
 
 // Option ...
@@ -16,6 +18,7 @@ type Option struct {
 	Conf           config.Config
 	Logger         logger.Logger
 	ServiceManager services.IServiceManager
+	RedisRepo      repo.RedisRepositoryStorage
 }
 
 // New ...
@@ -29,9 +32,13 @@ func New(option Option) *gin.Engine {
 		Logger:         option.Logger,
 		ServiceManager: option.ServiceManager,
 		Cfg:            option.Conf,
+		Redis:          option.RedisRepo,
 	})
 
 	api := router.Group("/v1")
+	api.POST("/users/verification", handlerV1.VerifyUser)
+	api.POST("/users/register", handlerV1.RegisterUser)
+
 	api.POST("/users/post", handlerV1.CreateUser)
 	api.GET("/users/:id", handlerV1.GetUser)
 	api.GET("/users", handlerV1.ListUsers)
